app/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sayhi
  name: sayhi
  namespace: app
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: sayhi
  type: NodePort
