app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sayhi
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: "internet-facing" 
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sayhi
                port:
                  number: 3000
